--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -1,6 +1,9 @@
 name: Publish Python 🐍 distribution 📦 to TestPyPI
 
-on: push
+on:
+  push:
+    tags:
+    - 'v[0-9].[0-9]+.[0-9]+'
 
 jobs:
   build:
