--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -2,13 +2,28 @@ name: Publish Python 🐍 distribution 📦 to TestPyPI
 
 on:
   push:
-    tags:
-    - 'v[0-9].[0-9]+.[0-9]+'
+    branches:
+    - main
 
 jobs:
+  check:
+    name: Check if the version has changed in pyproject.toml
+    runs-on: ubuntu-latest
+
+    outputs:
+      is_version_greater: ${{ steps.did-version-change.outputs.is_version_greater }}
+      version: ${{ steps.did-version-change.outputs.version }}
+    steps:
+    - uses: raven-wing/did-version-change-action@v1
+      id: did-version-change
+      
   build:
     name: Build distribution 📦
     runs-on: ubuntu-latest
+    
+    # run only if the version has changed
+    needs: check
+    if: needs.check.outputs.is_version_greater == 'true'
 
     steps:
     - name: Checkout the repository
@@ -56,6 +71,7 @@ jobs:
       and upload them to GitHub Release
     needs:
     - publish-to-testpypi
+    - check
     runs-on: ubuntu-latest
 
     permissions:
@@ -79,7 +95,7 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       run: >-
         gh release create
-        '${{ github.ref_name }}'
+        '${{ needs.check.outputs.version }}'
         --repo '${{ github.repository }}'
         --notes ""
     - name: Upload artifact signatures to GitHub Release
