--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "py-pcbu"
-version = "0.1.2"
-description = "Add your description here"
+version = "0.1.3"
+description = "A package to interact with the PC Bio Unlock credentials module."
 authors = [
-    { name = "LM. Garret", email = "9049104+lmgarret@users.noreply.github.com" }
+    { name = "LM. Garret", email = "lm@codingarret.dev" }
 ]
 dependencies = [
     "py-machineid>=0.6.0",
@@ -27,6 +27,7 @@ packages = ["src/pcbu"]
 include = [
   "src",
   "pyproject.toml",
+  "CHANGELOG.md",
   "README.md",
   "LICENSE",
 ]
