--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,15 @@
             "request": "launch",
             "program": "scripts/test_unlock.py",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Debug Pair Server",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "pcbu",
+            "args": ["-v", "pair_server"],
+            "console": "integratedTerminal",
+            "justMyCode": true
         }
     ]
 }
