--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,16 @@ authors = [
 dependencies = [
     "py-machineid>=0.6.0",
     "dataclass-wizard>=0.22.3",
-    "cryptography>=42.0.8",
+    "cryptography>=43.0.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
+
+[project.optional-dependencies]
+cli = [
+    "qrcode>=7.4.2",
+    "typer>=0.12.5",
+]
 
 [build-system]
 requires = ["hatchling"]
